<resources>
    <string name="app_name">Payten SofPOS</string>
    <string name="app_name_first">OTP</string>
    <string name="app_name_second">Soft POS</string>
    <string name="app_label_smart">Smart POS</string>
    <string name="intro_body_1">Hitro. Varno. Kadarkoli.</string>
    <string name="intro_body_2">Preprost način \nsprejemanja kartičnih in Flik plačil.</string>
    <string name="intro_landing_1">Dobrodošli</string>
    <string name="intro_landing_2">v aplikaciji OTP Smart POS, ki vam omogoča hiter, varen in preprost način sprejemanja plačilnih kartic in Flik takojšnjih plačil.</string>
    <string name="label_printed">Račun potiskan</string>
    <string name="label_no_printed">Aplikacija ne najde tiskalnika</string>
    <string name="label_operation_sales">Prodaja</string>
    <string name="label_registration">Registracija</string>
    <string name="label_marketing_text_big_font">Hitro. \nVarno. \nKadarkoli.</string>
    <string name="label_marketing_text_small_font">Preprost način \nsprejemanja plačilnih kartic.</string>
    <string name="button_become_user">Naprej</string>
    <string name="label_user_id">ID uporabnika</string>
    <string name="label_terminal_name">ID uporabnika</string>
    <string name="label_activation_code">Aktivacijska koda</string>
    <string name="label_enter_pin">Vnesite PIN kodo</string>
    <string name="label_enter_pin_registration">Vnesite želeno PIN kodo</string>
    <string name="label_repeat_pin">Ponovno vnesite želeni PIN</string>
    <string name="message_wrong_pin">Napačen PIN, prosimo poskusite znova</string>
    <string name="label_enter_amount">Vnesite znesek</string>
    <string name="label_enter_tip_header">Napitnina</string>
    <string name="button_proceed">Naprej</string>
    <string name="suffix_text">EUR</string>
    <string name="label_payment_type">Način plačila</string>
    <string name="label_payment_type_pos">POS</string>
    <string name="label_payment_type_void">Storniraj transakcijo</string>
    <string name="label_payment_type_ips">FLIK</string>
    <string name="label_billing_method">Izberite način plačila</string>
    <string name="label_tip_method">Izberite napitnino</string>
    <string name="hint_amount">Znesek</string>
    <string name="button_pos">POS</string>
    <string name="button_ips">FLIK</string>
    <string name="button_lean">prisloni</string>
    <string name="button_read">skeniraj</string>
    <string name="button_read_p">pokaži</string>
    <string name="label_dm">Dm drogerie</string>
    <string name="label_address">Antifašističke borbe 32, Beograd</string>
    <string name="label_mail">dmdrogerienbg@gmail.com</string>
    <string name="label_enter_amount_profile">Vnesite znesek</string>
    <string name="label_traffic">Promet</string>
    <string name="label_empty_traffic">Za ta filter ni transakcij.</string>
    <string name="label_settings">Nastavitve</string>
    <string name="button_sign_out">Odjava</string>
    <string name="label_period">Obdobje:</string>
    <string name="button_generate_report">Kreiraj poročilo</string>
    <string name="label_transaction_date">Datum</string>
    <string name="label_transaction_amount">Znesek</string>
    <string name="label_transaction_e2e">E2E Ref:</string>
    <string name="label_transaction_e2e_ips">E2E referenca:</string>
    <string name="label_transaction_status">Status:</string>
    <string name="label_transaction_merchant_id">MID:</string>
    <string name="label_transaction_terminal_id">TID:</string>
    <string name="label_transaction_merchant_name">Trgovec:</string>
    <string name="label_transaction_card_number">Številka kartice:</string>
    <string name="label_transaction_authorization_code">Avtorizacijska koda:</string>
    <string name="label_transaction_operation_name">Operacija:</string>
    <string name="label_transaction_response">Odgovor:</string>
    <string name="label_transaction_message">Sporočilo:</string>
    <string name="label_transaction_aid">AID:</string>
    <string name="merchant_name">Trgovec</string>
    <string name="button_cancel_transaction">Prekini transakcijo</string>
    <string name="button_void_transaction">Storniraj transakcijo</string>
    <string name="transaction_status_accepted">Odobreno</string>
    <string name="transaction_status_rejected">Zavrnjeno</string>
    <string name="transaction_status_pin_not_entered">PIN ni vnesen</string>
    <string name="transaction_status_wrong_pin">Napačen PIN</string>
    <string name="transaction_status_canceled">Stornirano</string>
    <string name="transaction_status_reversed">Stornirano</string>
    <string name="transaction_operation_void">Storno</string>
    <string name="label_filter">Filtri</string>
    <string name="label_filter_date">Datum</string>
    <string name="label_transaction_type">Tip transakcije</string>
    <string name="label_transaction_status_filter">Status transakcije</string>
    <string name="label_transaction_status_sort">Razvrsti</string>
    <string name="label_from">od</string>
    <string name="label_to">do</string>
    <string name="radio_button_pos">POS</string>
    <string name="radio_button_ips">FLIK</string>
    <string name="radio_button_all">Vsi</string>
    <string name="radio_button_date_asc">Po datumu naraščajoče</string>
    <string name="radio_button_date_dsc">Po datumu padajoče</string>
    <string name="radio_button_amount_asc">Po znesku naraščajoče</string>
    <string name="radio_button_amount_dsc">Po znesku padajoče</string>
    <string name="button_clear_filters">Pobriši filtre</string>
    <string name="button_apply_filters">Potrdi</string>
    <string name="transaction_warning_label">Ste prepričani, da želite stornirati transakcijo?</string>
    <string name="label_transaction_details">PODATKI O TRANSAKCIJI</string>
    <string name="button_canceled">Storniraj</string>
    <string name="button_quit">Prekini</string>
    <string name="label_registration_wrong_pin">Vnesena PIN-a se ne ujemata.\nProsimo, ponovite vnos.</string>
    <string name="label_nfc_off">NFC mora biti vključen!</string>
    <string name="button_registration_back">Nazaj</string>
    <string name="button_e2e_back">Vredu</string>
    <string name="button_try_again">Poizkusite ponovno</string>
    <string name="button_nfc_go">Vključi</string>
    <string name="label_registration_success">Uspešna registracija</string>
    <string name="label_void_success">Uspešna transakcija</string>
    <string name="label_void_failed">Storniranje transakcije ni uspelo</string>
    <string name="label_registration_failed">Neuspešna registracija.\n Prosimo poizkusite ponovno.</string>
    <string name="label_transaction_failed">Neuspešna transakcija</string>
    <string name="label_transaction_timeout">Transakcija je potekla!</string>
    <string name="label_transaction_failed_reason">Status</string>
    <string name="label_transaction_failed_wrong_pin">Vnesli ste napačen PIN</string>
    <string name="label_transaction_declined">Zavrnjena transakcija</string>
    <string name="label_transaction_expired">Transakcija je potekla</string>
    <string name="label_change_success">Uspešna menjava PIN-a</string>
    <string name="button_registration_success">Vredu</string>
    <string name="label_pin_sign_in">Vnesite PIN</string>
    <string name="label_root_device">Naprava je root-ana, delovanje aplikacije ni mogoče</string>
    <string name="dialog_login_wrong_pin">Vnesli ste napačen PIN. \n Preostalo število poskusov: </string>
    <string name="button_login_fail">Poskusite ponovno</string>
    <string name="button_login_fail_back">Nazaj</string>
    <string name="label_forgotten_pin">Pozabljen PIN</string>
    <string name="label_contact_bank">Prosimo vas, da kontaktirate\n klicni center za pomoč uporabnikom</string>
    <string name="label_login">Prijava</string>
    <string name="label_enter_current_pin">Unesite trenutni PIN</string>
    <string name="btn_intro_login">Prijava</string>
    <string name="btn_intro_sign_in">Postanite uporabnik</string>
    <string name="underline_forgotten_pin">Pozabljen PIN</string>
    <string name="label_pos_card">Prislonite kartico k napravi</string>
    <string name="button_transaction_cancel">Preveri plačilo</string>
    <string name="label_bill">Račun</string>
    <string name="label_customer_name">Ime kupca:</string>
    <string name="label_card_number">Številka kartice:</string>
    <string name="label_authorisation_code">Autorizacioni kod:</string>
    <string name="landing_label_small">Preprost način \n sprejemanja plačilnih kartic.</string>
    <string name="landing_label_big">Dobrodošli</string>
    <string name="label_ips_card">Skenirajte QR kodo</string>
    <string name="label_profile">Profil</string>
    <string name="label_menu">Meni</string>
    <string name="label_change_pin">Zamenjaj PIN</string>
    <string name="label_change_theme">Zamenjaj temo</string>
    <string name="label_address_profile">Naslov</string>
    <string name="toggle_button_label">vtomatično pošlji slip na\nemail naslov.</string>
    <string name="label_city">Kraj</string>
    <string name="label_terminal_id">TID:</string>
    <string name="label_ips_terminal_id">FLIK Terminal ID</string>
    <string name="label_theme_day">Dnevni režim</string>
    <string name="label_theme_night">Noćni režim</string>
    <string name="label_new_pin_first">Vnesite novi PIN</string>
    <string name="label_new_pin_repeat">Ponovite vneseni PIN</string>
    <string name="label_share_history">Ustvari poročilo</string>
    <string name="label_ips_type">Plačilo s Flikom</string>
    <string name="label_card_type">Plačilo s kartico</string>
    <string name="label_flik">Flik</string>
    <string name="label_change_pin_wrong_pin_no_attempts">Vnesli ste napačen PIN.</string>
    <string name="label_change_pin_wrong_pin_">Vnesli ste napačen PIN.\nŠt. preostalih poizkusov:</string>
    <string name="label_change_pin_wrong_pin_max_attempts">Presegli sta število možnih poskusov vnosa PINa.\nAplikacija je zaklenjena.\nProsimo, uporabite opcijo »Pozabljen PIN?« in sledite postopku na telefonu.\nV primeru težav, pokličite na klicni center +386 1 583 41 03.</string>
    <string name="message_must_enter_amount">Vnesti morate znesek.</string>
    <string name="btn_must_enter_amount">OK</string>
    <string name="wrong_format_userid">Vnesite aktivacijsko kodo</string>
    <string name="wrong_format_code">Vnesite aktivacijsko kodo</string>
    <string name="label_pin_log_in">Preverjanje PIN-a</string>
    <string name="success_transaction">Uspešna transakcija!</string>
    <string name="success_cancel_transaction">Uspešno prekinjena transakcija!</string>
    <string name="transaction_canceled_successful">Uspešno stornirana transakcija</string>
    <string name="transaction_canceled_unsuccessful">Neuspešno stornirana transakcija</string>
    <string name="transaction_slip">Znesek transakcije</string>
    <string name="transaction_button_reset">Poskusite ponovno</string>
    <string name="transaction_void_button_reset">Prekini</string>
    <string name="enter_pin_ok">Potrdi</string>
    <string name="enter_pin_clear">Počisti</string>
    <string name="enter_pin_cancel">Prekini</string>
    <string name="enter_pin_text">Vnesite PIN</string>
    <string name="choose_export_format">Izaberite format izveštaja:</string>
    <string name="format_pdf">PDF</string>
    <string name="format_xls">XLS</string>
    <string name="report_sending_title">Slanje izveštaja za period:</string>
    <string name="no">Odustani</string>
    <string name="send_email">Pošalji</string>
    <string name="enter_email_address">Unesite email adresu: </string>
    <string name="user_id_hint">Vnesite uporabniški ID</string>
    <string name="activation_code_hint">Vnesite aktivacijsko kodo</string>
    <string name="change_pin_header">Sprememba PIN-a</string>
    <string name="send_activation_code">Pošljite aktivacijsko kodo</string>
    <string name="next">Nadaljuj</string>
</resources>