<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:background="@color/white"
    android:padding="10dp">

<!--    <include layout="@layout/overlay_screen" />-->

    <ImageButton
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@null"
        android:visibility="invisible" />

    <LinearLayout
        android:id="@+id/verticalLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageView
            android:id="@+id/info_pks_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:contentDescription="TODO"
            android:visibility="gone"
            android:src="@drawable/logo_header" />

        <TextView
            android:id="@+id/ereceipt_enter_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/report_sending_title"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/ereceipt_format"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/ereceipt_email_ic"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/poppinsregular"
            android:textSize="15sp"
            android:text="@string/choose_export_format"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/colorPrimary" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radio_pdf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimary"
                android:text="@string/format_pdf"
                android:checked="true"
                android:textColor="@color/colorPrimary" />

            <RadioButton
                android:id="@+id/radio_xls"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimary"
                android:text="@string/format_xls"
                android:textColor="@color/colorPrimary" />


        </RadioGroup>

        <TextView
            android:id="@+id/ereceipt_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/ereceipt_email_ic"
            android:layout_marginBottom="10dp"
            android:text="@string/enter_email_address"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppinsregular"
            android:textSize="15sp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/colorPrimary" />

        <EditText
            android:id="@+id/email_edit_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/colorPrimary"
            android:inputType="text"
            android:lines="1"
            android:maxLines="1"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/verticalLayout"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <Button
                android:id="@+id/ereceipt_cancel_send_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="@dimen/margin_default"
                android:background="@drawable/round_brand_white"
                android:gravity="center"
                android:text="@string/no"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/ereceipt_send_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="@dimen/margin_default"
                android:background="@drawable/round_brand"
                android:gravity="center"
                android:text="@string/send_email"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/white" />



        </RelativeLayout>


    </LinearLayout>


</RelativeLayout>