<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundAmount"
        tools:context=".activities.BillActivity">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/icon_back"
            app:tint="@color/colorPrimary"
            android:tint="@color/colorPrimary"
            android:backgroundTint="@color/backgroundAmount"
            app:fabCustomSize="45dp"
            app:maxImageSize="16dp"
            android:layout_marginStart="@dimen/margin_big"
            android:layout_marginTop="@dimen/margin"
            app:borderWidth="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/labelBill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ss3black"
            android:text="@string/change_pin_header"
            android:textColor="@color/global_grey"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="@+id/back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/back" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pinLabel"
            style="@style/RoundInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginEnd="@dimen/margin_default"
            android:hint="@string/label_activation_code"
            android:visibility="invisible"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusBottomEnd="25dp"
            app:boxCornerRadiusBottomStart="25dp"
            app:boxCornerRadiusTopEnd="25dp"
            app:boxCornerRadiusTopStart="25dp"
            app:expandedHintEnabled="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ss3bold"
                android:hint="@string/activation_code_hint"
                android:inputType="text"
                android:singleLine="true"
                android:textColor="@color/text_black"
                android:textColorHint="@color/global_grey"
                android:textSize="@dimen/font_size_code_registration" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userIdLabel"
            style="@style/RoundInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginEnd="@dimen/margin_default"
            android:layout_marginBottom="@dimen/margin_default"
            android:hint="@string/label_user_id"
            android:visibility="invisible"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusBottomEnd="25dp"
            app:boxCornerRadiusBottomStart="25dp"
            app:boxCornerRadiusTopEnd="25dp"
            app:boxCornerRadiusTopStart="25dp"
            app:expandedHintEnabled="false"
            app:layout_constraintBottom_toTopOf="@+id/pinLabel"
            tools:layout_editor_absoluteX="15dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ss3bold"
                android:hint="@string/user_id_hint"
                android:inputType="text"
                android:singleLine="true"
                android:textColor="@color/text_black"
                android:textColorHint="@color/global_grey"
                android:textSize="@dimen/font_size_code_registration" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSendOtp"
            style="@style/CustomButtonOrangeNoHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_amount_top"
            android:layout_marginBottom="@dimen/intro_picture_margin_bottom"
            android:fontFamily="@font/ss3bold"
            android:paddingTop="@dimen/margin"
            android:paddingBottom="@dimen/margin"
            android:text="@string/next"
            android:textAlignment="center"
            android:visibility="gone"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pinLabel" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button"
            style="@style/CustomButtonOrangeNoHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_amount_top"
            android:fontFamily="@font/ss3bold"
            android:paddingTop="@dimen/margin"
            android:paddingBottom="@dimen/margin"
            android:text="@string/send_activation_code"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/spinner"
            style="@style/SpinKitView.Large.Circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:SpinKit_Color="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>