<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundAmount"
        android:fitsSystemWindows="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_label_smart"
            android:fontFamily="@font/ss3regular"
            android:textColor="@color/colorPrimary"
            android:textSize="42sp"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/margin_big"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/margin_big"
                android:src="@drawable/logo_splash"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_default"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/intro_body_1"
                    android:fontFamily="@font/ss3black"
                    android:textColor="@color/text_black"
                    android:textSize="26sp"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/margin_default"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/intro_body_2"
                    android:fontFamily="@font/ss3regular"
                    android:textColor="@color/text_black"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/margin_default"/>
            </LinearLayout>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginEnd="@dimen/margin_default"
            android:paddingTop="@dimen/margin"
            android:paddingBottom="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:text="@string/button_become_user"
            android:textSize="16sp"
            android:textAlignment="center"
            android:fontFamily="@font/ss3bold"
            android:textColor="@color/white"
            android:textAllCaps="false"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            style="@style/CustomButtonOrangeNoHeight"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>